[package]
name = "spaced"
version = "0.0.2"
edition = "2021"


[[bin]]
name = "space-cli"
path = "src/bin/space-cli.rs"

[[bin]]
name = "spaced"
path = "src/bin/spaced.rs"

[lib]
path = "src/lib.rs"

[dependencies]
wallet = { path = "../wallet" }
tokio = { version = "1.37.0", features = ["signal"] }
ctrlc = "3.4.4"
anyhow = "1.0.86"
clap = { version = "4.5.6", features = ["derive", "env"] }
log = "0.4.21"
serde = { version = "1.0.200", features = ["derive"] }
toml = "0.8.14"
hex = "0.4.3"
jsonrpsee = { version = "0.22.5", features = ["server", "http-client", "ws-client", "macros", "client-ws-transport-native-tls"] }
directories = "5.0.1"
env_logger = "0.11.3"
serde_json = "1.0.116"
bincode = {version = "2.0.0-rc.3", features = ["serde", "derive"]}
protocol = { path = "../protocol", version = "*", features = ["std"]}
spacedb = { git = "https://github.com/spacesprotocol/spacedb", tag = "0.0.2" }
base64 = "0.22.1"
futures = "0.3.30"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
threadpool = "1.8.1"