[package]
name = "protocol"
version = "0.0.5"
edition = "2021"

[dependencies]
bitcoin = { version = "0.32.2", features = ["base64", "serde"], default-features = false }
log = "0.4.14"

## optional features
bincode = { version = "2.0.0-rc.3", features = [ "derive", "serde", "alloc" ], default-features = false, optional = true }
serde = { version = "^1.0", features = ["derive"], default-features = false, optional = true }

[dev-dependencies]
rand = "0.8.5"
serde_json = "1.0.132"

[features]
default = []
serde = ["dep:serde"]
bincode = ["dep:bincode"]
std = ["serde", "bincode"]
