[package]
name = "wallet"
version = "0.0.2"
edition = "2021"

[dependencies]
bitcoin = { version = "0.32.2", features = ["base64", "serde"] }
bdk_wallet = { version = "1.0.0-alpha.13", features = ["keys-bip39"] }
bdk_file_store = "0.13.0"
secp256k1 = "0.29.0"
anyhow = "1.0.80"
bech32 = "0.11.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
jsonrpc = "0.18.0"
protocol = { path = "../protocol", features = ["std"], version = "*" }
ctrlc = "3.4.4"
hex = "0.4.3"
log = "0.4.21"